--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Eat Da Burger</title>
 </head>
 <body>
-    {{ body }}
+    {{{ body }}
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 </html>
