--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eat Da Burger</title>
+    <title>Title</title>
+    <link rel="stylesheet" scr="/assets/burger_style.css">
+    <style></style>
 </head>
 <body>
-    {{{ body }}
-
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    {{{ body }}}
 </body>
 </html>
