--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,23 +1,29 @@
-<h1>Eat Da Burger</h1>
-
-
-<div class="burger" id="burger">
-  {{#each burgers}}
+<h1 class="burgerTitle">Eat Da Burger</h1>
+<img class="burgerImg"src="../assets/img/burger.png">
+<div class="formDiv">
+    <form>
+      <p>
+        <label for="title">Enter a Burger:</label>
+        <input type="text" name="burgerName" id="burgerName" placeholder="NOM NOM NOM NOM NOM">
+      </p>
+        <button id="addBurger">Add Burger</button>
+      <p id="description">Add a burger you want to devour!</p>
+    </form>
 </div>
+<div class="col-md-6 notDevoured">
+<ul id="burgersList">
+  {{#each burgers}}
+<li>
     {{this.burger_name}}
-<button id="devour" data-id="{{this.id}}">Devour</button>
+<button id="devour" data-id="{{this.id}}">Devour Me</button>
+</li>
   {{/each}}
+</ul>
+</div>
+<div class="col-md-6 devoured">
+<p>I'm devoured</p>
+</div>
 
-
-
-<form id="main">
-  <p>
-    <label for="title">Enter a Burger:</label>
-    <input type="text" name="burgerInput" id="burgerInput" placeholder="NOM NOM NOM NOM NOM">
-  </p>
-  <button id="addBurger">Add Burger</button>
-  <p id="description">Add a burger, then get to eating!</p>
-</form>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-{{!-- <script src="../public/index.js"></script> --}}
+<script src="./Burger.js"></script>
