updates to devoured items

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,7 +21,11 @@
 </ul>
 </div>
 <div class="col-md-6 devoured">
-<p>I'm devoured</p>
+  <p>I'm devoured</p>
+  <ul id="eatenBurgers"> 
+  <li>
+  </li>
+  </ul>
 </div>
 
 
