--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Eat Da Burger</title>
     <link rel="stylesheet" href="/assets/css/burger_style.css">
     <style></style>
 </head>
