--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,19 +13,26 @@
 <div class="col-md-6 notDevoured">
 <ul id="burgersList">
   {{#each burgers}}
+  {{#unless devoured}}
 <li>
     {{this.burger_name}}
-<button id="devour" data-id="{{this.id}}">Devour Me</button>
+<button class="devour" data-id="{{this.id}}" onclick="eatBurger({{this.id}})">Devour Me</button>
 </li>
+{{/unless}}
   {{/each}}
 </ul>
 </div>
 <div class="col-md-6 devoured">
   <p>I'm devoured</p>
   <ul id="eatenBurgers"> 
-  <li>
-  </li>
-  </ul>
+  {{#each burgers}}
+  {{#if devoured}}
+<li>
+    {{this.burger_name}}
+</li>
+{{/if}}
+  {{/each}}
+</ul>
 </div>
 
 
